The MapSelectionScreen displays a "No Preview Available" image when there is no preview file associated with the selected map.